--- a/tests/test_search_engine.ipynb
+++ b/tests/test_search_engine.ipynb
@@ -41,6 +41,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle('/u02/duy/workspace/xproject_as/databases/dav_supplement_db.pkl')\n",
+    "engine = ses.GraphMatcher(df['product_name'], top_k=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -175,23 +185,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_pickle('/u02/duy/workspace/xproject_as/databases/dav_supplement_db.pkl')\n",
-    "engine = ses.GraphMatcher(df['product_name'], top_k=5)"
+    "#query = 'hehe'\n",
+    "query = 'Brain KBG'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = 'Salvia Topone'\n",
-    "#query = 'bronchitis'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "      <th>data_index</th>\n",
        "      <th>original</th>\n",
        "      <th>substring_matching_score</th>\n",
@@ -231,16 +230,14 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <th>13</th>\n",
-       "      <th>0</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Salvia Topone</td>\n",
+       "      <th>9</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Brain KBG</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
@@ -250,20 +247,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                                     data_index       original  \\\n",
-       "query_start_index query_end_index                                \n",
-       "0                 13              0           4  Salvia Topone   \n",
+       "                                   data_index   original  \\\n",
+       "query_start_index query_end_index                          \n",
+       "0                 9                         0  Brain KBG   \n",
        "\n",
-       "                                     substring_matching_score  matched_len  \\\n",
-       "query_start_index query_end_index                                            \n",
-       "0                 13              0                       1.0            2   \n",
+       "                                   substring_matching_score  matched_len  \\\n",
+       "query_start_index query_end_index                                          \n",
+       "0                 9                                     1.0            2   \n",
        "\n",
-       "                                     coverage_score  \n",
-       "query_start_index query_end_index                    \n",
-       "0                 13              0             1.0  "
+       "                                   coverage_score  \n",
+       "query_start_index query_end_index                  \n",
+       "0                 9                           1.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,6 +268,41 @@
    "source": [
     "results = engine.run(query)\n",
     "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for temp, row in results.iterrows():\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "data_index                          0\n",
+       "original                    Brain KBG\n",
+       "substring_matching_score          1.0\n",
+       "matched_len                         2\n",
+       "coverage_score                    1.0\n",
+       "Name: (0, 9), dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row"
    ]
   },
   {
