--- a/tests/test_search_engine.ipynb
+++ b/tests/test_search_engine.ipynb
@@ -186,7 +186,7 @@
    "outputs": [],
    "source": [
     "#query = 'hehe'\n",
-    "query = 'Brain KBG'"
+    "query = 'Calci Nano'"
    ]
   },
   {
@@ -216,6 +216,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "      <th>data_index</th>\n",
        "      <th>original</th>\n",
        "      <th>substring_matching_score</th>\n",
@@ -230,34 +231,113 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th rowspan=\"8\" valign=\"top\">0</th>\n",
+       "      <th rowspan=\"8\" valign=\"top\">10</th>\n",
        "      <th>0</th>\n",
-       "      <th>9</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Brain KBG</td>\n",
+       "      <td>1053</td>\n",
+       "      <td>CALCI NANO</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1441</td>\n",
+       "      <td>Calci Nano</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5582</td>\n",
+       "      <td>CALCI NANO+++</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1870</td>\n",
+       "      <td>Calci Nano MK7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3658</td>\n",
+       "      <td>CALCI NANO MK7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6483</td>\n",
+       "      <td>Calci nano K2EU</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1039</td>\n",
+       "      <td>CALCI NANO IQ</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6638</td>\n",
+       "      <td>Calci nano life</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.666667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                   data_index   original  \\\n",
-       "query_start_index query_end_index                          \n",
-       "0                 9                         0  Brain KBG   \n",
+       "                                     data_index         original  \\\n",
+       "query_start_index query_end_index                                  \n",
+       "0                 10              0        1053       CALCI NANO   \n",
+       "                                  1        1441       Calci Nano   \n",
+       "                                  2        5582    CALCI NANO+++   \n",
+       "                                  3        1870   Calci Nano MK7   \n",
+       "                                  4        3658   CALCI NANO MK7   \n",
+       "                                  5        6483  Calci nano K2EU   \n",
+       "                                  6        1039    CALCI NANO IQ   \n",
+       "                                  7        6638  Calci nano life   \n",
        "\n",
-       "                                   substring_matching_score  matched_len  \\\n",
-       "query_start_index query_end_index                                          \n",
-       "0                 9                                     1.0            2   \n",
+       "                                     substring_matching_score  matched_len  \\\n",
+       "query_start_index query_end_index                                            \n",
+       "0                 10              0                       1.0            2   \n",
+       "                                  1                       1.0            2   \n",
+       "                                  2                       1.0            2   \n",
+       "                                  3                       1.0            2   \n",
+       "                                  4                       1.0            2   \n",
+       "                                  5                       1.0            2   \n",
+       "                                  6                       1.0            2   \n",
+       "                                  7                       1.0            2   \n",
        "\n",
-       "                                   coverage_score  \n",
-       "query_start_index query_end_index                  \n",
-       "0                 9                           1.0  "
+       "                                     coverage_score  \n",
+       "query_start_index query_end_index                    \n",
+       "0                 10              0        1.000000  \n",
+       "                                  1        1.000000  \n",
+       "                                  2        1.000000  \n",
+       "                                  3        0.666667  \n",
+       "                                  4        0.666667  \n",
+       "                                  5        0.666667  \n",
+       "                                  6        0.666667  \n",
+       "                                  7        0.666667  "
       ]
      },
      "execution_count": 6,
@@ -272,37 +352,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for temp, row in results.iterrows():\n",
-    "    break"
+    "a = 'Người nộp i'\n",
+    "b = 'í nộp tiền/Pa'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = ses.GraphMatcher([b], group_splitter='([^\\n]+)', tokenizer='(.)', top_k=1, token_threshold=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>data_index</th>\n",
+       "      <th>original</th>\n",
+       "      <th>substring_matching_score</th>\n",
+       "      <th>matched_len</th>\n",
+       "      <th>coverage_score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>query_start_index</th>\n",
+       "      <th>query_end_index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <th>10</th>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>í nộp tiền/Pa</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.384615</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "data_index                          0\n",
-       "original                    Brain KBG\n",
-       "substring_matching_score          1.0\n",
-       "matched_len                         2\n",
-       "coverage_score                    1.0\n",
-       "Name: (0, 9), dtype: object"
+       "                                     data_index       original  \\\n",
+       "query_start_index query_end_index                                \n",
+       "5                 10              0           0  í nộp tiền/Pa   \n",
+       "\n",
+       "                                     substring_matching_score  matched_len  \\\n",
+       "query_start_index query_end_index                                            \n",
+       "5                 10              0                       1.0            5   \n",
+       "\n",
+       "                                     coverage_score  \n",
+       "query_start_index query_end_index                    \n",
+       "5                 10              0        0.384615  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "row"
+    "engine.run(a)"
    ]
   },
   {
