--- a/tests/test_tree_flow.ipynb
+++ b/tests/test_tree_flow.ipynb
@@ -62,10 +62,10 @@
     {
      "data": {
       "text/plain": [
-       "<function compute at 0x7fbe205332e0>\n",
-       "\t|--<function compute2 at 0x7fbe20533380>\n",
-       "\t\t|--print(step 2,*,**)\n",
-       "\t|--print(step 1,*,**)"
+       "compute\n",
+       "\t|--compute2\n",
+       "\t\t|--printer2\n",
+       "\t|--printer1"
       ]
      },
      "execution_count": 4,
@@ -80,60 +80,20 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "\n",
-    "        self.register_chain(queues.ProcessQueue(5), None, compute)\n",
-    "        self.register_chain(queues.ProcessQueue(5), compute, compute2)\n",
-    "        self.register_chain(queues.TransferQueue(), compute, partials(print, 'step 1'))\n",
-    "        self.register_chain(queues.TransferQueue(), compute2, partials(print, 'step 2'))\n",
+    "        self.compute = compute\n",
+    "        self.compute2 = compute2\n",
+    "        self.printer1 = partials(print, 'step 1')\n",
+    "        self.printer2 = partials(print, 'step 2')\n",
+    "\n",
+    "        self.register_chains(\n",
+    "            (queues.ProcessQueue(5), None, 'compute'),\n",
+    "            (queues.ProcessQueue(5), 'compute', 'compute2'),\n",
+    "            (queues.TransferQueue(), 'compute', 'printer1'),\n",
+    "            (queues.TransferQueue(), 'compute2', 'printer2'),\n",
+    "        )\n",
     "\n",
     "flow = Flow()\n",
     "flow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "step 1 0\n",
-      "step 1 2\n",
-      "step 1 4\n",
-      "step 1 6\n",
-      "step 1 8\n",
-      "step 1 10\n",
-      "step 1 12\n",
-      "step 1 14\n",
-      "step 2 -1\n",
-      "step 1 16\n",
-      "step 1 18\n",
-      "step 2 1\n",
-      "step 2 5\n",
-      "step 2 3\n",
-      "step 2 7\n",
-      "step 2 9\n",
-      "step 2 11\n",
-      "step 2 13\n",
-      "step 2 15\n",
-      "step 2 17\n"
-     ]
-    }
-   ],
-   "source": [
-    "flow.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for q, _ in flow.inputs():\n",
-    "    for i in range(10):\n",
-    "        q.put(i)"
    ]
   },
   {
