update queue interface + treeflow rendering

--- a/tests/test_tree_flow.ipynb
+++ b/tests/test_tree_flow.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "from plasma.parallel_processing import communicators, queues\n",
     "from plasma.parallel_processing.communicators.tree_flow import TreeFlow\n",
-    "from plasma.functional import partials"
+    "from plasma.functional import partials, AutoPipe"
    ]
   },
   {
@@ -51,7 +51,13 @@
     "\n",
     "def compute2(x):\n",
     "    time.sleep(2)\n",
-    "    return x - 1"
+    "    return x - 1\n",
+    "\n",
+    "class ComputeClass(AutoPipe):\n",
+    "\n",
+    "    def __init__(self, hihi, haha):\n",
+    "        super().__init__()\n",
+    "    pass"
    ]
   },
   {
@@ -62,10 +68,16 @@
     {
      "data": {
       "text/plain": [
-       "compute\n",
-       "\t|--compute2\n",
-       "\t\t|--printer2\n",
-       "\t|--printer1"
+       "[ProcessQueue(runner=1)]\n",
+       "\t|-(compute:<function compute at 0x7f62d1ed3d80>)\n",
+       "\t\t|-[ProcessQueue(runner=1)]\n",
+       "\t\t\t|-(compute2:<function compute2 at 0x7f62d1ecc180>)\n",
+       "\t\t\t\t\t|-[TransferQueue(runner=1)]\n",
+       "\t\t\t\t\t\t|-(printer2:print(step 2,*,**))\n",
+       "\t\t|-[TransferQueue(runner=1)]\n",
+       "\t\t\t|-(printer1:print(step 1,*,**))\n",
+       "\t\t|-[ProcessQueue(runner=1)]\n",
+       "\t\t\t|-(compute3:ComputeClass())"
       ]
      },
      "execution_count": 4,
@@ -82,6 +94,7 @@
     "\n",
     "        self.compute = compute\n",
     "        self.compute2 = compute2\n",
+    "        self.compute3 = ComputeClass(1, 2)\n",
     "        self.printer1 = partials(print, 'step 1')\n",
     "        self.printer2 = partials(print, 'step 2')\n",
     "\n",
@@ -90,6 +103,7 @@
     "            (queues.ProcessQueue(5), 'compute', 'compute2'),\n",
     "            (queues.TransferQueue(), 'compute', 'printer1'),\n",
     "            (queues.TransferQueue(), 'compute2', 'printer2'),\n",
+    "            (queues.ProcessQueue(5), 'compute', 'compute3'),\n",
     "        )\n",
     "\n",
     "flow = Flow()\n",
