add yield to flow

--- a/tests/test_caller_block.ipynb
+++ b/tests/test_caller_block.ipynb
@@ -59,15 +59,12 @@
     {
      "data": {
       "text/plain": [
-       "compute1-<class '__main__.Inner'>\n",
-       "\tcompute1-<function compute at 0x7f076932c860>\n",
-       "\tcompute2-<function compute at 0x7f076932c860>\n",
-       "compute2-<function compute at 0x7f076932c860>\n",
-       "compute3-<class '__main__.Inner'>\n",
-       "\tcompute1-<function compute at 0x7f076932c860>\n",
-       "\tcompute2-<function compute at 0x7f076932c860>\n",
-       "printer-<function print_pass at 0x7f076917ea20>\n",
-       "aggregator-<class 'plasma.parallel_processing.communicators.aggregator.Aggregator'>"
+       "[ProcessQueue(runner=1)]\n",
+       "\t|-(compute2:<function compute at 0x7f1718b87c40>)\n",
+       "\t\t|-[ProcessQueue(runner=1)]\n",
+       "\t\t\t|-(printer:<function print_pass at 0x7f1718b87ce0>)\n",
+       "\t\t\t\t\t|-[TransferQueue]\n",
+       "\t\t\t\t\t\t|-(aggregator:Aggregator)"
       ]
      },
      "execution_count": 4,
@@ -80,36 +77,16 @@
     "\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        manager = pp.mp.Manager()\n",
     "\n",
-    "        self.compute1 = Inner()\n",
     "        self.compute2 = compute\n",
-    "        self.compute3 = Inner()\n",
     "        self.printer = print_pass\n",
     "        self.aggregator = pp.communicators.Aggregator(20)\n",
     "\n",
     "        self.registerIOs(\n",
-    "            compute1={\n",
-    "                'compute1': pp.queues.ProcessQueue(2),\n",
-    "                'compute2': pp.queues.ProcessQueue(2),\n",
-    "            },\n",
     "            compute2=pp.queues.ProcessQueue(2),\n",
-    "            compute3={\n",
-    "                'compute1': pp.queues.ProcessQueue(2),\n",
-    "                'compute2': pp.queues.ProcessQueue(2),\n",
-    "            },\n",
     "            printer=pp.queues.ProcessQueue(),\n",
     "            aggregator=pp.queues.TransferQueue(),\n",
     "        )\n",
-    "\n",
-    "\n",
-    "class Inner(pp.communicators.Flow):\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.compute1 = compute\n",
-    "        self.compute2 = compute\n",
     "\n",
     "caller = Outer()\n",
     "caller"
@@ -121,174 +98,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/20 [00:04<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n",
-      "1.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 10%|█         | 2/20 [00:05<00:00, 19.79it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.0\n",
-      "3.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 20%|██        | 4/20 [00:06<00:04,  3.34it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.0\n",
-      "5.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 30%|███       | 6/20 [00:07<00:05,  2.56it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.0\n",
-      "7.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 40%|████      | 8/20 [00:08<00:05,  2.31it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8.0\n",
-      "9.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 50%|█████     | 10/20 [00:09<00:04,  2.19it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.0\n",
-      "11.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 60%|██████    | 12/20 [00:10<00:03,  2.12it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13.0\n",
-      "12.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 70%|███████   | 14/20 [00:11<00:02,  2.08it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14.0\n",
-      "15.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 80%|████████  | 16/20 [00:12<00:01,  2.05it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16.0\n",
-      "17.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 90%|█████████ | 18/20 [00:13<00:00,  2.03it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18.0\n",
-      "19.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:14<00:00,  1.43it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 32, 64, 96, 128, 160, 192, 224, 256, 288, 320, 352, 416, 384, 448, 480, 512, 544, 576, 608]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "AttributeError",
+     "evalue": "'Outer' object has no attribute 'put'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m caller:\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m20\u001b[39m):\n\u001b[0;32m----> 3\u001b[0m         \u001b[43mcaller\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mput\u001b[49m(i)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(caller\u001b[38;5;241m.\u001b[39maggregator\u001b[38;5;241m.\u001b[39mwait())\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Outer' object has no attribute 'put'"
      ]
     }
    ],
