--- a/tests/test_tree_flow.ipynb
+++ b/tests/test_tree_flow.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "def compute(x):\n",
     "    time.sleep(2)\n",
-    "    return x * 2\n",
+    "    return [x * 2] * 2\n",
     "\n",
     "def compute2(x):\n",
     "    time.sleep(2)\n",
@@ -57,7 +57,9 @@
     "\n",
     "    def __init__(self, hihi, haha):\n",
     "        super().__init__()\n",
-    "    pass"
+    "    \n",
+    "    def run(self, *inputs, **kwargs):\n",
+    "        return queues.Signal.IGNORE"
    ]
   },
   {
@@ -69,15 +71,26 @@
      "data": {
       "text/plain": [
        "[ProcessQueue(runner=1)]\n",
-       "\t|-(compute:<function compute at 0x7f62d1ed3d80>)\n",
-       "\t\t|-[ProcessQueue(runner=1)]\n",
-       "\t\t\t|-(compute2:<function compute2 at 0x7f62d1ecc180>)\n",
-       "\t\t\t\t\t|-[TransferQueue(runner=1)]\n",
-       "\t\t\t\t\t\t|-(printer2:print(step 2,*,**))\n",
-       "\t\t|-[TransferQueue(runner=1)]\n",
-       "\t\t\t|-(printer1:print(step 1,*,**))\n",
-       "\t\t|-[ProcessQueue(runner=1)]\n",
-       "\t\t\t|-(compute3:ComputeClass())"
+       "\n",
+       "  |-(compute:<function compute at 0x7fc64327f7e0>)-Yield\n",
+       "\n",
+       "    |-[ProcessQueue(runner=1)]\n",
+       "\n",
+       "      |-(compute2:<function compute2 at 0x7fc64327fba0>)\n",
+       "\n",
+       "        |-[TransferQueue(runner=1)]\n",
+       "\n",
+       "          |-(printer2:print(step 2,*,**))\n",
+       "\n",
+       "      |-[TransferQueue(runner=1)]\n",
+       "\n",
+       "        |-(printer1:print(step 1,*,**))\n",
+       "\n",
+       "        |-[ProcessQueue(runner=1)]\n",
+       "\n",
+       "          |-(compute3:ComputeClass)\n",
+       "\n",
+       "            |-[ThreadQueue(runner=1)]"
       ]
      },
      "execution_count": 4,
@@ -86,13 +99,12 @@
     }
    ],
    "source": [
-    "agg = communicators.Aggregator(total=10, process_base=False)\n",
     "class Flow(TreeFlow):\n",
     "\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "\n",
-    "        self.compute = compute\n",
+    "        self.compute = communicators.processor.Yield(compute)\n",
     "        self.compute2 = compute2\n",
     "        self.compute3 = ComputeClass(1, 2)\n",
     "        self.printer1 = partials(print, 'step 1')\n",
@@ -103,11 +115,41 @@
     "            (queues.ProcessQueue(5), 'compute', 'compute2'),\n",
     "            (queues.TransferQueue(), 'compute', 'printer1'),\n",
     "            (queues.TransferQueue(), 'compute2', 'printer2'),\n",
-    "            (queues.ProcessQueue(5), 'compute', 'compute3'),\n",
+    "            (queues.ProcessQueue(), 'compute', 'compute3'),\n",
+    "            (queues.ThreadQueue(), 'compute3', None),\n",
     "        )\n",
     "\n",
     "flow = Flow()\n",
-    "flow"
+    "flow.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for q in flow.inputs.values():\n",
+    "   for i in range(10):\n",
+    "        q.put(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flow.inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flow.outputs"
    ]
   },
   {
