fix process queue signal +base queue

--- a/tests/test_queue.ipynb
+++ b/tests/test_queue.ipynb
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/thanh/development/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -37,19 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q = queues.ThreadQueue(n=5)\\\n",
-    "    .register_callback(lambda x: f'{x:05d}')\\\n",
-    "    .chain(print)\\\n",
-    "    .run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -80,13 +68,27 @@
     }
    ],
    "source": [
-    "for i in range(20):\n",
-    "    q.put(i)"
+    "q = queues.ThreadQueue(n=5)\\\n",
+    "    .register_callback(lambda x: f'{x:05d}')\\\n",
+    "    .chain(print)\\\n",
+    "    .run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(20):\n",
+    "    q.put(i)\n",
+    "\n",
+    "q.put(queues.Signal.IGNORE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
