--- a/tests/test_tree_flow.ipynb
+++ b/tests/test_tree_flow.ipynb
@@ -72,25 +72,25 @@
       "text/plain": [
        "[ProcessQueue(runner=1)]\n",
        "\n",
-       "  |-(compute:<function compute at 0x7fc64327f7e0>)-Yield\n",
+       "  |-(compute:<function compute at 0x7fabaf9b99e0>)\n",
        "\n",
        "    |-[ProcessQueue(runner=1)]\n",
        "\n",
-       "      |-(compute2:<function compute2 at 0x7fc64327fba0>)\n",
+       "      |-(compute2:<function compute2 at 0x7fabaf80fba0>)\n",
        "\n",
        "        |-[TransferQueue(runner=1)]\n",
        "\n",
        "          |-(printer2:print(step 2,*,**))\n",
        "\n",
-       "      |-[TransferQueue(runner=1)]\n",
+       "    |-[TransferQueue(runner=1)]\n",
        "\n",
-       "        |-(printer1:print(step 1,*,**))\n",
+       "      |-(printer1:print(step 1,*,**))\n",
        "\n",
-       "        |-[ProcessQueue(runner=1)]\n",
+       "    |-[ProcessQueue(runner=1)]\n",
        "\n",
-       "          |-(compute3:ComputeClass)\n",
+       "      |-(compute3:ComputeClass)\n",
        "\n",
-       "            |-[ThreadQueue(runner=1)]"
+       "        |-[ThreadQueue(runner=1)]"
       ]
      },
      "execution_count": 4,
@@ -120,34 +120,110 @@
     "        )\n",
     "\n",
     "flow = Flow()\n",
-    "flow.run()"
+    "flow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 1 4\n",
+      "step 1 2\n",
+      "step 1 6\n",
+      "step 1 4\n",
+      "step 1 2\n",
+      "step 1 0\n",
+      "step 1 6\n",
+      "step 1 8\n",
+      "step 1 0\n",
+      "step 1 8\n",
+      "step 1step 2 3\n",
+      " 12\n",
+      "step 1 12\n",
+      "step 1 10\n",
+      "step 1 10\n",
+      "step 1 14\n",
+      "step 1 16\n",
+      "step 1 16\n",
+      "step 1 14\n",
+      "step 1 18\n",
+      "step 1 18\n",
+      "step 2 1\n",
+      "step 2 5\n",
+      "step 2 -1\n",
+      "step 2 1\n",
+      "step 2 5\n",
+      "step 2 3\n",
+      "step 2 -1\n",
+      "step 2 7\n",
+      "step 2 7\n",
+      "step 2 9\n",
+      "step 2 11\n",
+      "step 2 11\n",
+      "step 2 9\n",
+      "step 2 15\n",
+      "step 2 15\n",
+      "step 2 13\n",
+      "step 2 13\n",
+      "step 2 17\n",
+      "step 2 17\n"
+     ]
+    }
+   ],
    "source": [
-    "for q in flow.inputs.values():\n",
-    "   for i in range(10):\n",
-    "        q.put(i)"
+    "with flow:\n",
+    "   for q in flow.inputs.values():\n",
+    "      for i in range(10):\n",
+    "         q.put(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'compute': ProcessQueue(\n",
+       "   persistent=False,\n",
+       "   n=5,\n",
+       " )}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "flow.inputs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'compute3': ThreadQueue(\n",
+       "   persistent=False,\n",
+       "   n=1,\n",
+       " )}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "flow.outputs"
    ]
