--- a/tests/test_tree_flow.ipynb
+++ b/tests/test_tree_flow.ipynb
@@ -47,19 +47,19 @@
    "source": [
     "def compute(x):\n",
     "    time.sleep(2)\n",
-    "    return [x * 2] * 2\n",
+    "    return ['a', 'b']\n",
     "\n",
     "def compute2(x):\n",
     "    time.sleep(2)\n",
-    "    return x - 1\n",
+    "    return x + 'c'\n",
     "\n",
     "class ComputeClass(AutoPipe):\n",
     "\n",
     "    def __init__(self, hihi, haha):\n",
     "        super().__init__()\n",
     "    \n",
-    "    def run(self, *inputs, **kwargs):\n",
-    "        return queues.Signal.IGNORE"
+    "    def run(self, tmp):\n",
+    "        return tmp + 'd'"
    ]
   },
   {
@@ -72,11 +72,11 @@
       "text/plain": [
        "[ProcessQueue(runner=1)]\n",
        "\n",
-       "  |-(compute:<function compute at 0x7f2c8f5598a0>)\n",
+       "  |-(compute:<function compute at 0x7fabd3c458a0>)\n",
        "\n",
        "    |-[ProcessQueue(runner=1)]\n",
        "\n",
-       "      |-(compute2:<function compute2 at 0x7f2c8f3aba60>)\n",
+       "      |-(compute2:<function compute2 at 0x7fabd3a97a60>)\n",
        "\n",
        "        |-[TransferQueue(runner=1)]\n",
        "\n",
@@ -90,7 +90,7 @@
        "\n",
        "      |-(compute3:ComputeClass)\n",
        "\n",
-       "        |-[ThreadQueue(runner=1)]"
+       "        |-[TransferQueue(runner=1)]"
       ]
      },
      "execution_count": 4,
@@ -99,6 +99,8 @@
     }
    ],
    "source": [
+    "out_queue= queues.TransferQueue()\n",
+    "\n",
     "class Flow(TreeFlow):\n",
     "\n",
     "    def __init__(self):\n",
@@ -116,7 +118,7 @@
     "            (queues.TransferQueue(), 'compute', 'printer1'),\n",
     "            (queues.TransferQueue(), 'compute2', 'printer2'),\n",
     "            (queues.ProcessQueue(), 'compute', 'compute3'),\n",
-    "            (queues.ThreadQueue(), 'compute3', None),\n",
+    "            (out_queue, 'compute3', None),\n",
     "        )\n",
     "\n",
     "flow = Flow()\n",
@@ -125,9 +127,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TransferQueue()"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ad\n",
+      "ad\n",
+      "ad\n",
+      "bd\n",
+      "ad\n",
+      "bd\n",
+      "bd\n",
+      "ad\n",
+      "bd\n",
+      "bd\n",
+      "ad\n",
+      "bd\n",
+      "ad\n",
+      "bd\n",
+      "ad\n",
+      "ad\n",
+      "ad\n",
+      "bd\n",
+      "bd\n",
+      "bd\n"
+     ]
+    }
+   ],
+   "source": [
+    "out_queue.register_callback(print).run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 1 a\n",
+      "step 1 a\n",
+      "step 1 a\n",
+      "step 1 a\n",
+      "step 1 b\n",
+      "step 1 b\n",
+      "step 1 b\n",
+      "step 1 b\n",
+      "step 1 a\n",
+      "step 1 b\n",
+      "step 2 ac\n",
+      "step 1 a\n",
+      "step 1 b\n",
+      "step 1 a\n",
+      "step 1 b\n",
+      "step 1 a\n",
+      "step 1 b\n",
+      "step 1 a\n",
+      "step 1 b\n",
+      "step 1 a\n",
+      "step 1 b\n",
+      "step 2 ac\n",
+      "step 2 ac\n",
+      "step 2 ac\n",
+      "step 2 bc\n",
+      "step 2 bc\n",
+      "step 2 bc\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 bc\n"
+     ]
+    }
+   ],
    "source": [
     "with flow:\n",
     "   for q in flow.inputs.values():\n",
@@ -137,20 +232,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'compute': ProcessQueue(\n",
+       "   persistent=False,\n",
+       "   n=5,\n",
+       " )}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "flow.inputs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'compute3': TransferQueue()}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "flow.outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_queue.running"
    ]
   },
   {
