update graph consistency check

--- a/tests/test_caller_block.ipynb
+++ b/tests/test_caller_block.ipynb
@@ -61,15 +61,17 @@
       "text/plain": [
        "[ProcessQueue(runner=1)]\n",
        "\n",
-       "  |-(compute2:<function compute at 0x7f3998781bc0>)\n",
+       "  |-(compute2:<function compute at 0x7fd6871b9a80>)\n",
        "\n",
        "    |-[ProcessQueue(runner=1)]\n",
        "\n",
-       "      |-(printer:<function print_pass at 0x7f39985cfd80>)\n",
+       "      |-(printer:<function print_pass at 0x7fd68700bc40>)\n",
        "\n",
        "        |-[TransferQueue(runner=1)]\n",
        "\n",
-       "          |-(aggregator:Aggregator)"
+       "          |-(aggregator:Aggregator)\n",
+       "\n",
+       "            |-[ThreadQueue(runner=1)]"
       ]
      },
      "execution_count": 4,
@@ -78,6 +80,7 @@
     }
    ],
    "source": [
+    "outputs = pp.queues.ThreadQueue()\n",
     "class Outer(pp.communicators.Flow):\n",
     "\n",
     "    def __init__(self):\n",
@@ -91,6 +94,7 @@
     "            compute2=pp.queues.ProcessQueue(2),\n",
     "            printer=pp.queues.ProcessQueue(),\n",
     "            aggregator=pp.queues.TransferQueue(),\n",
+    "            outputs=outputs\n",
     "        )\n",
     "\n",
     "caller = Outer()\n",
@@ -108,6 +112,68 @@
     "        caller.put(i)\n",
     "    \n",
     "    print(caller.aggregator.wait())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adding new block after outputs already registered, removed old outputs\n"
+     ]
+    }
+   ],
+   "source": [
+    "caller.print = print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "caller.registerIOs(print=pp.queues.ThreadQueue(), outputs=pp.queues.ThreadQueue())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ProcessQueue(runner=1)]\n",
+       "\n",
+       "  |-(compute2:<function compute at 0x7fd6871b9a80>)\n",
+       "\n",
+       "    |-[ProcessQueue(runner=1)]\n",
+       "\n",
+       "      |-(printer:<function print_pass at 0x7fd68700bc40>)\n",
+       "\n",
+       "        |-[TransferQueue(runner=1)]\n",
+       "\n",
+       "          |-(aggregator:Aggregator)\n",
+       "\n",
+       "            |-[ThreadQueue(runner=1)]\n",
+       "\n",
+       "              |-(print:builtin_function_or_method)\n",
+       "\n",
+       "                |-[ThreadQueue(runner=1)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "caller"
    ]
   },
   {
