remove torch interface

--- a/tests/test_tree_flow.ipynb
+++ b/tests/test_tree_flow.ipynb
@@ -72,11 +72,11 @@
       "text/plain": [
        "[ProcessQueue(runner=1)]\n",
        "\n",
-       "  |-(compute:<function compute at 0x7fabd3c458a0>)\n",
+       "  |-(compute:<function compute at 0x7f80ca74f9c0>)\n",
        "\n",
        "    |-[ProcessQueue(runner=1)]\n",
        "\n",
-       "      |-(compute2:<function compute2 at 0x7fabd3a97a60>)\n",
+       "      |-(compute2:<function compute2 at 0x7f80ca74fa60>)\n",
        "\n",
        "        |-[TransferQueue(runner=1)]\n",
        "\n",
@@ -127,102 +127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TransferQueue()"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ad\n",
-      "ad\n",
-      "ad\n",
-      "bd\n",
-      "ad\n",
-      "bd\n",
-      "bd\n",
-      "ad\n",
-      "bd\n",
-      "bd\n",
-      "ad\n",
-      "bd\n",
-      "ad\n",
-      "bd\n",
-      "ad\n",
-      "ad\n",
-      "ad\n",
-      "bd\n",
-      "bd\n",
-      "bd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "out_queue.register_callback(print).run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "step 1 a\n",
-      "step 1 a\n",
-      "step 1 a\n",
-      "step 1 a\n",
-      "step 1 b\n",
-      "step 1 b\n",
-      "step 1 b\n",
-      "step 1 b\n",
-      "step 1 a\n",
-      "step 1 b\n",
-      "step 2 ac\n",
-      "step 1 a\n",
-      "step 1 b\n",
-      "step 1 a\n",
-      "step 1 b\n",
-      "step 1 a\n",
-      "step 1 b\n",
-      "step 1 a\n",
-      "step 1 b\n",
-      "step 1 a\n",
-      "step 1 b\n",
-      "step 2 ac\n",
-      "step 2 ac\n",
-      "step 2 ac\n",
-      "step 2 bc\n",
-      "step 2 bc\n",
-      "step 2 bc\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 bc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with flow:\n",
     "   for q in flow.inputs.values():\n",
@@ -232,63 +148,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'compute': ProcessQueue(\n",
-       "   persistent=False,\n",
-       "   n=5,\n",
-       " )}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "flow.inputs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'compute3': TransferQueue()}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "flow.outputs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "out_queue.running"
    ]
